# image-converter

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.claude/: settings.local.json
src/image_converter/: __init__.py  cli.py  converter.py  web.py
src/image_converter/static/: index.html
tests/: test_converter.py
